@@ -64,6 +64,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - Don't report alps reservation ids if a node is in interactive mode. TRQ-1251.
   b - Only attempt to cancel an orphaned alps reservation a maximum of one time per
       iteration. TRQ-1251.
+  b - Fix a deadlock when recording an alps reservation on the server side. Cray only. 
+      TRQ-1272.
 
 4.1.2
   e - Add the ability to run a single job partially on CRAY hardware and partially
